--- a/web/components/manga_list/manga_list.css
+++ b/web/components/manga_list/manga_list.css
@@ -1,3 +1,11 @@
+material-fab {
+    background-color: black !important;
+    color: white;
+    position: fixed !important;
+    bottom: 1em;
+    right: 1em;
+}
+
 .content {
     padding: 5em;
     text-align: center;
