--- a/web/components/favorites_list/favorites_list.html
+++ b/web/components/favorites_list/favorites_list.html
@@ -1,5 +1,5 @@
 <div *ngIf="mangas.isEmpty" class="content">
-    <h1>You have no favorites</h1>
+    <h1>You have no favorites.</h1>
 </div>
 <material-menu *ngIf="mangas.isNotEmpty">
     <menu-item *ngFor="let manga of mangas; let i = index" [avatar]="manga['im'] | eden_image"
