--- a/lib/components/favorites_list/favorites_list.html
+++ b/lib/components/favorites_list/favorites_list.html
@@ -3,7 +3,7 @@
 </div>
 <material-list *ngIf="mangas.isNotEmpty">
     <material-list-item
-            *ngFor="let manga of mangas; let i = index"
+            *ngFor="let manga of mangas; let i = index; trackBy: trackById"
             [routerLink]="detailUrl(manga['i'])"
             [class.separated]="i < mangas.length - 1">
         <img [src]="manga['im'] | eden_image" class="material-list-item-primary">
