--- a/lib/components/manga_list/manga_list.html
+++ b/lib/components/manga_list/manga_list.html
@@ -29,7 +29,7 @@
 </modal>
 <material-list *ngIf="!loading && mangas.isNotEmpty">
     <material-list-item
-            *ngFor="let manga of mangas | search:query; let i = index"
+            *ngFor="let manga of mangas | search:query; let i = index; trackBy: trackById"
             [routerLink]="detailUrl(manga['i'])">
         <img [src]="manga['im'] | eden_image" class="material-list-item-primary">
         {{ manga['t'] }}
